--- a/retro_calc/Base.lproj/LaunchScreen.storyboard
+++ b/retro_calc/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +16,40 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="QCw-sE-9bm">
+                                <rect key="frame" x="180" y="163" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="9XT-Gc-Kuu"/>
+                                    <constraint firstAttribute="height" constant="128" id="BhA-Tv-h4t"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="g5c-WV-Ehy">
+                                <rect key="frame" x="94" y="28" width="413" height="74"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="74" id="0vH-k4-QEz"/>
+                                    <constraint firstAttribute="width" constant="413" id="S7e-aV-1Sl"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="Pv5-u7-moT">
+                                <rect key="frame" x="0.0" y="472" width="600" height="128"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="L1N-XV-Lv6">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QCw-sE-9bm" firstAttribute="centerX" secondItem="L1N-XV-Lv6" secondAttribute="centerX" id="3fm-o8-3Vl"/>
+                            <constraint firstItem="L1N-XV-Lv6" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="97o-eh-C3W"/>
+                            <constraint firstItem="g5c-WV-Ehy" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" id="KiX-3D-ztG"/>
+                            <constraint firstItem="QCw-sE-9bm" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="150" id="MJa-Hf-neS"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Pv5-u7-moT" secondAttribute="bottom" id="WMS-mh-uPB"/>
+                            <constraint firstAttribute="trailing" secondItem="L1N-XV-Lv6" secondAttribute="trailing" id="X6c-Td-Iju"/>
+                            <constraint firstItem="L1N-XV-Lv6" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="bUV-sy-lbp"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="L1N-XV-Lv6" secondAttribute="bottom" id="fRE-GC-gcB"/>
+                            <constraint firstItem="QCw-sE-9bm" firstAttribute="centerX" secondItem="g5c-WV-Ehy" secondAttribute="centerX" id="q8Z-Lj-gd7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +57,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
